--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -110,16 +110,6 @@ header {
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
-header ul {
-  list-style:none;
-  height:40px;
-  padding:0;
-  background: #f4f4f4;
-  border-radius:5px;
-  border:1px solid #e0e0e0;
-  width:270px;
-}
-
 header li {
   width:89px;
   float:left;
@@ -133,6 +123,16 @@ header li:first-child a {
 
 header li:last-child a {
   border-radius:0 5px 5px 0;
+}
+
+header ul a {
+  line-height:1;
+  font-size:11px;
+  color:#999;
+  display:block;
+  text-align:center;
+  padding-top:6px;
+  height:34px;
 }
 
 header ul a:hover {
