--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -110,10 +110,16 @@ header {
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
+header ul {
+  list-style:none;
+  height:40px;
+  padding:0;
+  width:270px;
+}
+
 header li {
   width:89px;
   float:left;
-  border-right:1px solid #e0e0e0;
   height:40px;
 }
 
