--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -123,6 +123,38 @@ header li {
   height:40px;
 }
 
+header #li::before {
+      display: inline-block;
+      content: '';
+      border-radius: 100%;
+      height: 4px;
+      width: 4px;
+      margin-right: 6px;
+      background: #3b5998;
+}
+
+
+header #gh::before {
+      display: inline-block;
+      content: '';
+      border-radius: 100%;
+      height: 4px;
+      width: 4px;
+      margin-right: 6px;
+      background: #28a745;
+}
+
+
+header #ig::before {
+      display: inline-block;
+      content: '';
+      border-radius: 100%;
+      height: 4px;
+      width: 4px;
+      margin-right: 6px;
+      background: #6f42c1;
+}
+
 header li:first-child a {
   border-radius:5px 0 0 5px;
 }
