--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -124,33 +124,33 @@ header li {
 }
 
 header #li::before {
-      display: inline-block;
+      display: block;
       content: '';
       border-radius: 100%;
-      height: 40px;
-      width: 4px;
+      height: 6px;
+      width: 6px;
       margin-right: 6px;
       background: #3b5998;
 }
 
 
 header #gh::before {
-      display: inline-block;
+      display: block;
       content: '';
       border-radius: 100%;
-      height: 4px;
-      width: 4px;
+      height: 6px;
+      width: 6px;
       margin-right: 6px;
       background: #28a745;
 }
 
 
 header #ig::before {
-      display: inline-block;
+      display: block;
       content: '';
       border-radius: 100%;
-      height: 4px;
-      width: 4px;
+      height: 6px;
+      width: 6px;
       margin-right: 6px;
       background: #6f42c1;
 }
