--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -6,6 +6,18 @@ body {
   font-weight:400;
 }
 
+#404_centre {
+  height: 200px;
+  width: 400px;
+  background: black;
+
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -100px;
+  margin-left: -200px;
+}
+
 h1, h2, h3, h4, h5, h6 {
   color:#222;
   margin:0 0 20px;
