--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,6 +1,138 @@
-html {
+a,
+abbr,
+acronym,
+address,
+applet,
+article,
+aside,
+audio,
+b,
+big,
+blockquote,
+body,
+canvas,
+caption,
+center,
+cite,
+code,
+dd,
+del,
+details,
+dfn,
+dialog,
+div,
+dl,
+dt,
+em,
+embed,
+fieldset,
+figcaption,
+figure,
+font,
+footer,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+header,
+hgroup,
+hr,
+html,
+i,
+iframe,
+img,
+ins,
+kbd,
+label,
+legend,
+li,
+main,
+mark,
+menu,
+meter,
+nav,
+object,
+ol,
+output,
+p,
+pre,
+progress,
+q,
+rp,
+rt,
+ruby,
+s,
+samp,
+section,
+small,
+span,
+strike,
+strong,
+sub,
+summary,
+sup,
+table,
+tbody,
+td,
+tfoot,
+th,
+thead,
+time,
+tr,
+tt,
+u,
+ul,
+var,
+video,
+xmp {
  border:0;
  margin:0;
  padding:0;
  font-size:100%
+}
+
+html, body {
+    background-color: #c6c6c6;
+    font-family: 'Roboto', sans-serif;
+}
+
+.header {
+    background: #363636;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.6);
+    flex: none;
+    height: 55px;
+    position: relative;
+    z-index: 100;
+}
+
+.header-inner {
+    width: 1200px;
+    height: 55px;
+    margin: 0 auto;
+    position: relative;
+    display: flex;
+    z-index: 99; 
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.header-nav-item {
+    display: block;
+    height: 55px;
+    line-height: 55px;
+    padding: 0 15px;
+    padding-top: 0px;
+    font-weight: 300;
+    font-size: 12px;
+    color: #f6f6f6 !important;
+    z-index: 3;
+    position: relative;
+}
+
+a {
+    background-color: transparent;
+    text-decoration: none;
 }
