--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -249,3 +249,16 @@ a {
   margin-left: 5px;
   margin-bottom: 10px;
 }
+
+.carousel img {
+  display: block;
+  height: 400px;
+  margin-right: 15px;
+  border-radius: 0.375rem;
+}
+
+@media screen and ( min-width: 768px ) {
+  .carousel img {
+    height: 400px;
+  }
+}
