--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -262,3 +262,36 @@ a {
     height: 400px;
   }
 }
+
+.project-card {
+  display: block;
+  border-radius: 0.375rem;
+  height: auto;
+  width: auto;
+  background: var(--header-color);
+  color: var(--text-color);
+  font-family: 'Roboto', sans-serif;
+}
+
+.project-card img{
+  border-top-left-radius:0.375rem;
+  border-top-right-radius:0.375rem;
+  object-fit: cover;
+  width: 100%;
+  display: block;
+  height: 200px;
+  margin-bottom: 10px;
+}
+
+.project-card h3{
+  margin-left: 10px;
+  padding-bottom: 10px;
+}
+
+.project-card:hover{
+  background: #5881a8;
+}
+
+.project-card:focus {
+  box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.6);
+}
