--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -149,9 +149,9 @@ body.dark-theme {
 }
 
 .header-nav-item {
-    display: block;
+    display: flex; 
+    align-items: center;
     height: 55px;
-    line-height: 55px;
     padding: 0 20px;
     padding-top: 0px;
     font-weight: 300;
@@ -187,9 +187,8 @@ a {
 }
 
 .footer-item {
-  display: block;
-  height: 44px;
-  line-height: 44px;
+  display: flex; 
+  align-items: center; 
   padding: 0 10px;
   padding-top: 0px;
   font-weight: 300;
