--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,16 +26,10 @@
     </header>
 
     <div class="grid-container">
-      <div class="grid-100 mobile-grid-100" style="padding-top: 25vh;"></div>
-      <h1 class="grid-50 prefix-25 suffix-25 mobile-prefix-10 mobile-suffix-10 mobile-grid-80" style="font-size: 36px; padding-bottom: 5px;">No Posts.</h1>
-      <p class="grid-50 prefix-25 suffix-25 mobile-prefix-10 mobile-suffix-10 mobile-grid-80" style="font-size: 16px; padding-bottom: 5px;">Come back soon to see any posts that I have written on a variety of topics.</p>
-      
-      {% for post in site.posts %}
-      <h1 class="grid-100 mobile-grid-100 content-heading" style="font-size: 36px;"><a href="{{ post.url }}" style="color:inherit;">{{ post.title }}</a></h1>
-      <p class="grid-100 mobile-grid-100" style="font-size: 16px; margin-bottom:10px; color:darkgrey">01/02/34</p>
-      <p class="grid-100 mobile-grid-100" style="font-size: 16px; margin-bottom:15px;">{{ post.excerpt }}</p>
-      <a href="{{ post.url }}" class="grid-100 mobile-grid-100 button404" style="font-size: 16px;margin-bottom: 40px;">Read More</a>
-      {% endfor %}
+        <h1 class="grid-80 mobile-grid-80" style="font-size: 36px; padding-bottom: 5px;">{{ page.title }}</h1>
+        <p class="grid-100 mobile-grid-100" style="font-size: 16px; padding-bottom: 5px; margin-bottom: 30px;">{{ page.date }}</p> 
+        
+        {{ content }}
     </div>
 
     <footer class="footer">
