--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,7 @@
 
     <div class="grid-container">
         <h1 class="grid-80 mobile-grid-80" style="font-size: 36px; padding-bottom: 5px;">{{ page.title }}</h1>
-        <p class="grid-100 mobile-grid-100" style="font-size: 16px; padding-bottom: 5px; margin-bottom: 30px;">{{ page.date }}</p> 
-        
+        <p class="grid-100 mobile-grid-100" style="font-size: 16px; padding-bottom: 5px; margin-bottom: 30px;">{{ page.date | date: "%Y-%m-%d" }}</p>     
         {{ content }}
     </div>
 
