Fixed dropwdown i think

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -305,11 +305,21 @@ a {
   box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.6);
 }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+@media screen and (max-width: 600px) {
+  .dropdown-content {
+    background: var(--header-color);
+    display: none;
+    position: fixed;
+    margin-top: 55px;
+    width: 100%;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.6);
+    top: 0;
+    z-index: 100;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .dropdown-content a{
+    display: none;
+  }
 }
