--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,4 +63,5 @@
     </footer>
   </body>
   <script src="../scripts/theme.js"></script> 
+  <script src="../scripts/dropdown.js"></script> 
 </html>
